--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
   scroll-behavior: smooth !important;
 }
 body{
+  height: 100%;
   position: relative;
   background: #2b2a2a;
   overflow-x: hidden;
@@ -420,13 +421,11 @@ h4{
 /* **************** end hero************** */
 
 .parallax{
-  display: inline-block;
-  background-image: url("../IMG/sunset-crop.jpg") !important;
-  height: 120% !important;
-  background-attachment: fixed !important;
-  background-position: center !important;
-  background-repeat: no-repeat !important;
-  background-size: cover !important;
+  background-image: url("../IMG/real-55.jpg") !important;
+  background-attachment: fixed ;
+  background-position: center;
+  background-repeat: no-repeat ;
+  background-size: cover ;
 }
 
 .img-quote img{
@@ -439,9 +438,9 @@ h4{
   font-family: roboto;
   color: rgb(206, 206, 206);
 }
-.img2, .img4{
+/* .img2, .img4{
   backdrop-filter: blur(5px);
-}
+} */
 .txt2, .txt4{
   color: #f3f3f3;
 }
